@@ -1,3 +1,11 @@
+2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	patch by: Sebastian Pölsterl
+
+	* gst/mpegdemux/mpegtspacketizer.c:
+	* sys/dvb/gstdvbsrc.c:
+	Fix memleaks.
+
 2008-11-04  Stefan Kost  <ensonic@users.sf.net>
 
 	* ext/alsaspdif/Makefile.am:
